--- a/app/src/main/res/layout/activity_next2trs.xml
+++ b/app/src/main/res/layout/activity_next2trs.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    tools:context=".LessonsTraficSights">
+    tools:context=".next2trs">
 
     <LinearLayout
         android:layout_width="match_parent"
