--- a/app/src/main/res/layout/activity_next3trs.xml
+++ b/app/src/main/res/layout/activity_next3trs.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    tools:context=".next2trs">
+    tools:context=".next3trs">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,7 +44,7 @@
             android:layout_marginStart="36dp"
 
             android:layout_marginTop="68dp"
-            android:src="@drawable/trs21"
+            android:src="@drawable/trs31"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,7 +55,7 @@
             android:layout_marginStart="36dp"
 
             android:layout_marginTop="184dp"
-            android:src="@drawable/trs22"
+            android:src="@drawable/trs32"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,7 +66,7 @@
             android:layout_marginStart="36dp"
 
             android:layout_marginTop="300dp"
-            android:src="@drawable/trs23"
+            android:src="@drawable/trs33"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,7 +77,7 @@
             android:layout_marginStart="36dp"
 
             android:layout_marginTop="408dp"
-            android:src="@drawable/trs24"
+            android:src="@drawable/trs34"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -88,7 +88,7 @@
             android:layout_marginStart="36dp"
 
             android:layout_marginTop="520dp"
-            android:src="@drawable/trs25"
+            android:src="@drawable/trs35"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -97,10 +97,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="55dp"
-        android:paddingTop="29dp"
-        android:text="Advantages and Forbidding signs"
-        android:textSize="20dp"
+        android:paddingLeft="50dp"
+        android:paddingTop="30dp"
+        android:text="Telltale and Special instructions signs"
+        android:textSize="18dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="31dp">
 
@@ -119,7 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="96dp"
-            android:text="Main road"
+            android:text="Traffic is direct"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -127,8 +127,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="184dp"
-            android:text="Intersection with secondary road"
+            android:layout_marginTop="212dp"
+            android:text="Roundabout traffic"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -137,7 +137,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="336dp"
-            android:text="Entry is denied"
+            android:text="Pedestrian crossing"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -145,8 +145,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="428dp"
-            android:text="Maximum speed limit"
+            android:layout_marginTop="440dp"
+            android:text="Residence beginning"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -154,14 +154,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="544dp"
-            android:text="Stopping is prohibited"
+            android:layout_marginTop="552dp"
+            android:text="End of settlement"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/nexTo2"
+            android:id="@+id/nexTo3"
             android:layout_width="112dp"
             android:layout_height="57dp"
             android:layout_marginTop="636dp"
