--- a/app/src/main/res/layout/activity_road_signs.xml
+++ b/app/src/main/res/layout/activity_road_signs.xml
@@ -17,8 +17,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/cpt_question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="92dp"
+            android:text="1/5"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/text_question"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/image_back"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/image_back"
             android:layout_width="59dp"
             android:layout_height="44dp"
             android:layout_marginStart="16dp"
@@ -28,9 +44,12 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:id="@+id/text_question"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
             android:text="Question"
             android:textColor="@color/white"
             android:textSize="25sp"
@@ -42,9 +61,9 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="102dp"
-        android:layout_height="59dp"
+        android:id="@+id/btn_next"
+        android:layout_width="126dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="28dp"
         android:backgroundTint="@color/primary_color"
@@ -61,48 +80,53 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:orientation="vertical"
+        android:backgroundTint="@color/primary_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btn_choose1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="16sp"
             android:background="@drawable/background_btn_choose"
-            android:text="Button" />
+            android:onClick="ClickChoose"
+            android:text="Button"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/btn_choose2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"
             android:background="@drawable/background_btn_choose"
-            android:text="Button" />
+            android:onClick="ClickChoose"
+            android:text="Button"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/btn_choose3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"
             android:background="@drawable/background_btn_choose"
-            android:text="Button" />
+            android:onClick="ClickChoose"
+            android:text="Button"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <Button
-            android:id="@+id/button9"
+            android:id="@+id/btn_choose4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"
             android:background="@drawable/background_btn_choose"
-            android:text="Button" />
+            android:onClick="ClickChoose"
+            android:text="Button"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
