--- a/app/src/main/res/layout/activity_road_signs.xml
+++ b/app/src/main/res/layout/activity_road_signs.xml
@@ -90,7 +90,8 @@
             android:id="@+id/btn_choose1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_btn_choose"
+            android:backgroundTint="@color/white"
+            android:background="@drawable/background_btn_choose_diasbaled"
             android:onClick="ClickChoose"
             android:text="Button"
             android:textColor="@color/black"
@@ -101,7 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:background="@drawable/background_btn_choose"
+            android:background="@drawable/background_btn_choose_diasbaled"
             android:onClick="ClickChoose"
             android:text="Button"
             android:textColor="@color/black"
@@ -112,7 +113,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:background="@drawable/background_btn_choose"
+            android:background="@drawable/background_btn_choose_diasbaled"
             android:onClick="ClickChoose"
             android:text="Button"
             android:textColor="@color/black"
@@ -123,7 +124,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:background="@drawable/background_btn_choose"
+            android:background="@drawable/background_btn_choose_diasbaled"
             android:onClick="ClickChoose"
             android:text="Button"
             android:textColor="@color/black"
