--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -43,17 +43,34 @@
                 android:padding="8dp"
                 android:textColor="@color/black" />
 
-            <EditText
-                android:id="@+id/login_password"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:drawableLeft="@drawable/lock"
-                android:drawablePadding="8dp"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:padding="8dp"
-                android:textColor="@color/black" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp">
+
+                <EditText
+                    android:id="@+id/login_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_toStartOf="@+id/login_password_toggle"
+                    android:drawableLeft="@drawable/lock"
+                    android:drawablePadding="8dp"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:padding="8dp"
+                    android:textColor="@color/black" />
+
+                <ImageButton
+                    android:id="@+id/login_password_toggle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_seepsw"
+                    android:contentDescription="Toggle Password Visibility" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
