--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Correct: "
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:layout_below="@id/resultTitleTextView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp" />
@@ -50,10 +50,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Incorrect: "
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:layout_below="@id/textViewCorrect"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp" />
+            <TextView
+                android:id="@+id/backTo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Go to Profile"
+                android:layout_below="@id/textViewIncorrect"
+                android:textSize="16sp"
+                android:layout_centerHorizontal="true">
+
+            </TextView>
         </RelativeLayout>
 
 
