--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -97,7 +97,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:padding="8dp"
-                android:text="Dont have an account? Sign In!"
+                android:text="Dont have an account? Sign Up!"
                 android:textSize="13.5sp" />
 
             <TextView
