--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="84dp"
-            android:text="Lessons"
+            android:text="Lessons Road signs"
             android:backgroundTint="@color/skyblue"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -111,11 +111,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:backgroundTint="@color/skyblue"
-            android:text="Rules of driving"
+            android:text="Lessons of Rules"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button2"
             app:layout_constraintVertical_weight="1" />
 
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:backgroundTint="@color/skyblue"
+            android:text="Rules of driving"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/button2"
+            app:layout_constraintVertical_weight="1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
