--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/background1"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".LessonsActivity">
+    tools:context=".RulesActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
