--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -29,9 +29,18 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="25dp"
+                android:paddingBottom="5dp"
                 android:text="If you want to learn and insure your life to be a good driver, take this lesson and take the quiz."
-                android:textSize="23dp"/>
+                android:textSize="25dp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="25dp"
+                android:text="Learn Carefully"
+                android:textSize="23dp"
+                />
             <Button
                 android:id="@+id/buttonNext"
                 android:layout_width="match_parent"
