--- a/app/src/main/res/layout/activity_rules_quiz.xml
+++ b/app/src/main/res/layout/activity_rules_quiz.xml
@@ -43,6 +43,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/question_image"
+            android:layout_width="100dp"
+            android:layout_height="95dp"
+            android:layout_marginStart="152dp"
+            android:layout_marginTop="32dp"
+            android:src="@drawable/blank_profile"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/text_question"
             android:layout_width="0dp"
@@ -56,8 +66,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.657" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
