--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
     <color name="gray1">#858C85</color>
     <color name="primary_color">#565cce</color>
     <color name="second_color">#8d92fa</color>
+    <color name="colorprimary">#0040FF</color>
+    <color name="colorprimarydark">#10028F</color>
 </resources>
